--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
-spring.application.name=proyectoDBA
+spring.application.name=hoteles
+server.port=91
+spring.thymeleaf.cache=false
+
+
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+
+##CONEXION A LA BASE DE DATOS##
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# application.properties
+spring.jpa.show-sql=true
+
