--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
                     <artifactId>h2</artifactId>
                     <scope>runtime</scope>
                 </dependency>
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>font-awesome</artifactId>
+                    <version>5.15.4</version>  <!-- O la última versión disponible -->
+                </dependency>
+
 
 	</dependencies>
 
